syntax = "proto3";


message EdgeMessage {
    double f_nan = 1;
    double f_pos_inf = 2;
    double f_neg_inf = 3;
    int32 f_max_int32 = 4;
    int32 f_min_int32 = 5;
    int64 f_max_int64 = 6;
    int64 f_min_int64 = 7;
    uint32 f_max_uint32 = 8;
    uint64 f_max_uint64 = 9;
    string f_unicode = 10;
    bytes f_binary = 11;
    string f_empty_str = 12;
    bytes f_empty_bytes = 13;
}
